# watchfloor

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  REQUIREMENTS.md  SECURITY.md  install.sh  pyproject.toml  start-system.sh  sync.sh  uninstall.sh  verify.sh
adapters/claude-code/: sync.sh
claude/: CLAUDE.md  settings.json
claude/agents/: analyst.md  architect.md  canary.md  code-reviewer.md  dependency-auditor.md  fixer.md  qa-engineer.md  security-auditor.md
claude/commands/: ba.md  checkpoint.md  cleaner.md  commit-readme.md  commit.md  critic.md  done.md  health.md  hotfix.md  implement.md  manualtest.md  plan-project.md  plan.md  productmanager.md  qa.md  refreshclaude.md  review.md  rollout.md  start-hotfix.md  start.md  static-analysis.md  team-qa.md  team-review.md  ux.md
claude/hooks/: lint-on-edit.sh  log-bash.sh  log-permissions.sh  notify-macos.sh  tdd-gate.sh
claude/project-memory/: .gitkeep
claude/rules/: schema-conventions.md  skill-conventions.md  static-analysis-conventions.md
claude/schema/: execution-plan.schema.json
claude/templates/: pre-push.template  quality.sh.template  template-greenfield.yaml  template-refactor.yaml
claude/tools/: autopilot.sh  commit-finalize.sh  commit-preflight.sh  validate-plan.py
core/schema/: baseline.schema.json  deferred-findings.schema.json  deviation-taxonomy.schema.json  events.schema.json  execution-plan.schema.json  grinder-dashboard-api.schema.json  grinder-plan.schema.json  grinder-state.schema.json  manifest.schema.json  pipeline.schema.json  plan-field-ownership.yaml
dashboard/: .gitignore  LICENSE  README.md  install.sh  serve.py
dashboard/app/: index.html  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
dashboard/hooks/: report-status.sh
dashboard/scripts/: worktree.sh
dashboard/server/: _exception_handlers.py  _responses.py  _serve_legacy.py  app.py  autopilot_helpers.py  chain_events.py  control.py  feature_helpers.py  grinder_helpers.py  lifecycle_events.py  metrics_helpers.py  plan_helpers.py  pty_session.py  resume_helper.py  schemas.py  session_helpers.py  status_helper.py  stuck_detection.py  terminal_ws.py  tmux_session.py  validation.py
dashboard/tests/: conftest.py  manual-smoke-fastapi-routes-port-artifacts-grinder.sh  manual-smoke-fastapi-routes-port-autopilot.sh  manual-smoke-fastapi-routes-port-core.sh  run-all.sh  test-api-autopilot.sh  test-api-control.sh  test-api-grinder.sh  test-api-metrics.sh  test-api-plan-artifacts.sh  test-api-plan.sh  test-app.sh  test-autopilot-parser.sh  test-autopilot-pause.sh  test-concurrent-writes.sh  test-convert.sh  test-csrf-enforcement.sh  test-delegator.sh  test-fastapi-integration.sh  test-features.sh  test-hook.sh  (+50 more)
scripts/: grinder-watch.sh  migrate-docs-tree.sh  run_tests.sh  worktree.sh
secrets/: README.md  openai.env.example
tests/: conftest.py  run-cov.sh  setup-subprocess-coverage.sh  smoke.sh  test-doc-rewrite.sh  test-eager-exit.sh  test-grinder-check.sh  test-import-style-canonical.sh  test-plan-review-no-tests.sh  test-qa-phase-marker-skip.sh  test-start-system-defaults.sh  test-static-analysis-surgical.sh  test-sync-sh-schema-source.sh  test-tests-green-sha-marker.sh  test-validate-manifest.sh  test-worktree-reaper.sh  test_assert_implement_committed.sh  test_autopilot_chain.py  test_autopilot_lock.py  test_autopilot_phase_guards.sh  test_autopilot_trust_check.sh  test_bash_stderr_classifier.sh  test_chain_runner_overrides.sh  test_classify_bash_result_hook.sh  test_classify_phase_exit.sh  test_claude_session_lib.sh  test_commit_finalize_msg_scope.sh  test_commit_finalize_untracked_stash.sh  test_commit_preflight_ratchet.py  test_consumer_2_0_routing.py  test_consumer_legacy_handling.sh  test_cost_summary.sh  test_default_model_per_phase.sh  test_deviation_assessor_agent.sh  test_deviation_heuristic.sh  test_deviation_producer.sh  test_deviation_taxonomy.py  test_deviation_tracker.py  test_deviation_wire.sh  test_diff_against_main_uses_merge_base.sh  (+103 more)
(+559 files in other folders)
